--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "aryanshridhar.github.io",
+  "homepage": "http://aryanshridhar.github.io/aryanshridhar.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,7 +30,9 @@
     "prettier": "prettier 'src/**/*.ts'",
     "prettier:fix": "prettier --write 'src/**/*.ts'",
     "eslint": "eslint 'src/**/*.ts'",
-    "eslint:fix": "eslint --fix 'src/**/*.ts'"
+    "eslint:fix": "eslint --fix 'src/**/*.ts'",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +60,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   }
 }
