package: Refactor directory name.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aryanshridhar.github.io",
-  "homepage": "http://aryanshridhar.github.io/aryanshridhar.github.io",
+  "name": "portfolio",
+  "homepage": "http://aryanshridhar.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
